xfsprogs-1.3.8 (19 September 2001)
	- rewrote the LVM support used by mkfs.xfs to call external
	  lvdisplay program to get volume geometry (mkp@mkp.net)
	- fix bug in LVM driver wrapper where it would not have been
	  used at all, ever (since 1.3.0), due to idiot programmer
	  error (*blush*) -- also thanks to mkp for the bug fix

xfsprogs-1.3.7 (10 September 2001)
	- enable preallocation in xfs_mkfile [missed during port?]
	- fix xfs_db core dump when reporting freespace
	- allow libuuid to be linked dynamically if desired (based
	  on a patch from Colin Walters <walters@verbum.org>, helps
	  the folk working on the Debian installer for XFS)
	- licensing change for "libhandle" (was GPL, now LGPL-2.1)
	  and some related header files

xfsprogs-1.3.6 (31 August 2001)
	- make mkfs.xfs aware of geometries that might cause
	  inode numbers to exceed 32 significant bits.
	- make xfs_growfs warn if new filesystem will have
	  inode numbers that exceed 32 significant bits.
	- fix logprint bug in reporting extended attributes
	  (thanks to Tang Lingbo <tanglb@sina.com> for fixing this)
	- fix mkfs.xfs core dump when attemping to run on devices
	  which are too small to hold a valid XFS filesystem

xfsprogs-1.3.5 (13 August 2001)
	- fix bug in xfs_db bit handling on big endian platforms
	- fix mkfs bug related to too-small final allocation group
	- fix signedness bug in DMAPI ioctl structure definition

xfsprogs-1.3.4 (04 August 2001)
	- fix endian bug in xfs_db "frag" command
	- small configure script changes to allow cross compilation
	- several man pages updated to document external log usage
	- install another shared library symlink for ld to find
	- switched on -fno-strict-aliasing for library object builds
	- fix several minor compiler warnings when building on IA64

xfsprogs-1.3.3 (27 July 2001)
	- fixes for (hopefully) the last few nits in libtool usage

xfsprogs-1.3.2 (23 July 2001)
	- install static libs and libtool archives into /usr/lib